// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin fixtures minimal config: deps 1`] = `
"/**
 * @license
 *
 * deps:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 * dep:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *   contributors: c1 <c1@example.com>, c2 <c2@example.com>
 *
 */"
`;

exports[`Plugin fixtures minimal config: homepage 1`] = `
"/**
 * @license
 *
 * homepage:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 * github:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/
 *
 * github-hash:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/#hash
 *
 * github-hash-readme:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/mkwtys/selenic-webpack-plugin
 *
 * hash:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://example.com/#hash
 *
 * hash-readme:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://example.com/#readme
 *
 */"
`;

exports[`Plugin fixtures minimal config: minimal 1`] = `
"/**
 * @license
 *
 * a:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */"
`;

exports[`Plugin fixtures minimal config: multi-versions 1`] = `
"/**
 * @license
 *
 * multi-versions:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 * a:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 * all:
 *   version: 1.0.0
 *   license: MIT
 *   author: all <all@example.com>
 *
 * b:
 *   version: 1.0.0
 *   license: MIT
 *   author: b <b@example.com>
 *
 * c:
 *   version: 1.0.0
 *   license: MIT
 *   author: c <c@example.com>
 *
 * d:
 *   version: 1.0.0, 2.0.0
 *   license: MIT
 *   author: d <d@example.com>
 *
 *   version: 3.0.0
 *   license: ISC
 *   author: d <d@example.com>
 *
 */"
`;

exports[`Plugin fixtures minimal config: private 1`] = `""`;

exports[`Plugin fixtures splitChunks: deps 1`] = `
"/**
 * @license
 *
 * deps:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: deps 2`] = `
"/**
 * @license
 *
 * dep:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *   contributors: c1 <c1@example.com>, c2 <c2@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: homepage 1`] = `
"/**
 * @license
 *
 * homepage:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: homepage 2`] = `
"/**
 * @license
 *
 * github:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/
 *
 * github-hash:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/#hash
 *
 * github-hash-readme:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://github.com/mkwtys/selenic-webpack-plugin
 *
 * hash:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://example.com/#hash
 *
 * hash-readme:
 *   version: 1.0.0
 *   license: MIT
 *   homepage: https://example.com/#readme
 *
 */"
`;

exports[`Plugin fixtures splitChunks: minimal 1`] = `
"/**
 * @license
 *
 * a:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: minimal 2`] = `""`;

exports[`Plugin fixtures splitChunks: multi-versions 1`] = `
"/**
 * @license
 *
 * multi-versions:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: multi-versions 2`] = `
"/**
 * @license
 *
 * a:
 *   version: 1.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 * all:
 *   version: 1.0.0
 *   license: MIT
 *   author: all <all@example.com>
 *
 * b:
 *   version: 1.0.0
 *   license: MIT
 *   author: b <b@example.com>
 *
 * c:
 *   version: 1.0.0
 *   license: MIT
 *   author: c <c@example.com>
 *
 * d:
 *   version: 1.0.0, 2.0.0
 *   license: MIT
 *   author: d <d@example.com>
 *
 *   version: 3.0.0
 *   license: ISC
 *   author: d <d@example.com>
 *
 */"
`;

exports[`Plugin fixtures splitChunks: private 1`] = `""`;

exports[`Plugin fixtures splitChunks: private 2`] = `""`;
